Fri Aug 17 04:42:34 2001  George Lebl <jirka@5z.com>

	* daemon/auth.c, daemon/display.c, daemon/gdm-net.[ch],
	  daemon/gdm.[ch], daemon/server.[ch], daemon/slave.[ch]:
 	  Finish implementation of flexible servers and lots of related
	  cleanup and restructuring that was related.

	* daemon/server.c: close all fd's when running the X server.

	* gui/gdmflexiserver.c: implement the updated protocol and implement
	  all the error codes

	* gui/Makefile.am, gui/gdmflexiserver(|-xnest).desktop.in,
	  po/POTFILEs.in:  Add launchers for new flexi server and new
	  xnest flexiserver

	* gui/gdmlogin.c, daemon/slave.c: On flexi servers add the "Quit"
	  menu thingie, since it's just as useful as in xdmcp case here.
	  It should probably be a close button, not a Quit button.  I dunno.

Thu Aug 16 01:29:05 2001  George Lebl <jirka@5z.com>

	* configure.in, gui/gdmXnestchooser.c, gui/Makefile.am:  Add a proggie
	  for starting an Xnest chooser session.

	* daemon/gdm-net.c, daemon/gdm.[ch], gui/Makefile.am,
	  gui/gdmflexiserver.c: Make the protocol actually work right and
	  add a small proggie for starting new flexi X servers.

Wed Aug 15 13:14:11 2001  George Lebl <jirka@5z.com>

	* gui/gdmphotosetup.c: When writing to .gnome/photo, first unlink the
	  file

Wed Aug 15 01:54:02 2001  George Lebl <jirka@5z.com>

	* config/gdm.conf.in: Added StandardXServer and FlexibleXServers
	  and font includes a ,*.  Also Xservers use the "Standard"
	  definition, which all probably doesn't work

	* daemon/Makefile.am, daemon/gdm-net.[ch]: Move the fifo stuff here
	  and generalize it and add an interface for unix sockets

	* daemon/gdm.[ch]: Add support for the user protocol using unix
	  domain sockets

	* daemon/gdm.[ch], daemon/auth.c, daemon/display.c, daemon/server.c,
	  daemon/slave.c:  Do some Standard and Flexible/Xnest servers dance. 
	  Mostly doesn't work now still.

	* daaemon/misc.c: implement an incredibly evil function to figure out
	  a free X display number
