@@ -23,3 +23,5 @@ Added configs, do docs and gdmconfig stuff:
 	daemon/Xnest
 
 On busy server start up local server on a free display optionaly
+
+investigate doc building stuff
