@@ -1,3 +1,7 @@
+Fri Aug 17 14:47:08 2001  George Lebl <jirka@5z.com>
+
+	* docs/C/Makefile.am: fix rules since the .sgml file changed
+
 Fri Aug 17 04:42:34 2001  George Lebl <jirka@5z.com>
 
 	* daemon/auth.c, daemon/display.c, daemon/gdm-net.[ch],
